--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ jobs:
             - mvn clean install
             - cp .travis.settings.xml $HOME/.m2/settings.xml
             - mvn deploy -DmuleDeploy -Dserver=$server -Dworkers=$workers -DworkerType=$workerType -Denvironment=$environment -DmuleVersion=$muleVersion -DappName=$appName
+      if: branch = dev      
